test/ddc-spec/error/01-ErrorExp/22-RecNotLambda/Main.dcs

module Main with letrec

f = 5#