test/ddc-spec/error/01-ErrorExp/22-RecNotLambda/Main.error.check
Error in transformed module.
  in stage CoreLoad
  in pipe  PipeCoreCheck/Check
  test/ddc-spec/error/01-ErrorExp/22-RecNotLambda/Main.dcs:2:18
  Letrec can only bind lambda abstractions.
        This is not one: 5#
